<resources>
    <string name="app_name">MoulinApplication</string>
    <string name="title_home">Jokes</string>
    <string name="title_dashboard">My Favourites</string>
    <string name="title_notifications">Notifications</string>
    <string name="get_new_joke_text">Get New Joke</string>
    <string name="Punch_it_text">Punch It!</string>
    <string name="add_fav">ADD TO FAVOURITES</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Setup">SetupText</string>
    <string name="Punchline">This is the Punchline</string>
    <string name="add">ADD</string>
    <string name="how_good">Rate the joke</string>
    <string name="joke">This is a joke.</string>
    <string name="punchline">This is a punchline</string>
    <string name="rating">4/5</string>
    <string name="button">Button</string>
</resources>