<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/white_squares"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/jokesetup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="7dp"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:text="@string/Setup" />

        <TextView
            android:id="@+id/jokepunchline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:padding="7dp"
            android:textSize="15dp"
            android:text="@string/Punchline"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/howgood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_good"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="15dp"
            android:padding="15dp"
            tools:text="@string/how_good"
            />

        <RatingBar
            android:id="@+id/ratingbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="2dp"
            android:layout_marginTop="2dp">
        </RatingBar>

        <Button
            android:id="@+id/addbutton"
            android:layout_width="250dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_marginTop="30dp"

            app:backgroundTint="#FFC107" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>