<?xml version="1.0" encoding="utf-8"?>

<layout  xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/joke_card"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="20dp"
            app:cardElevation="1dp"
            android:layout_marginBottom="10dp"
            android:layout_margin="15dp"
            app:cardBackgroundColor="@color/light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/joke_setup"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/joke" />

                <TextView
                    android:id="@+id/joke_punchlune"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="1dp"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/punchline" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RatingBar
                        android:id="@+id/joke_rating"
                        android:padding="2dp"
                        android:isIndicator="true"
                        android:progressTint="@color/yellow"
                        android:progressBackgroundTint="@android:color/background_dark"
                        android:secondaryProgressTint="@android:color/background_dark"
                        android:clickable="false"
                        android:focusableInTouchMode="false"
                        android:focusable="false"
                        android:layout_gravity="start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/textView6"
                        android:gravity="center_horizontal"
                        android:textAlignment="center"
                        android:padding="15dp"
                        android:textColor="@color/black"
                        android:layout_gravity="end"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/rating" />

                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>
</layout>
