<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="joke"
            type="com.example.moulinapplication.model.Joke"/>
    </data>


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="35dp"
    android:background="@drawable/white_squares"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"

        android:layout_marginVertical="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">




        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="15"
            app:cardCornerRadius="10dp"
            app:rippleColor="@color/purple_500"
            android:backgroundTint="@color/material_on_primary_emphasis_medium"
            style="@style/CardView"
            android:textAlignment="center">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/joke_setup"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@{joke.setup}"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:shadowColor="@color/black"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="20sp">
            </com.google.android.material.textview.MaterialTextView>
        </com.google.android.material.card.MaterialCardView>



        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loading"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_margin="1dp"
            android:layout_gravity="center"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading_kubes"
            android:visibility="invisible"
            >
        </com.airbnb.lottie.LottieAnimationView>


        <TextView
            android:id="@+id/punchlinetext"
            android:layout_width="match_parent"
            android:layout_height="163dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@{joke.punchline}"
            android:textAlignment="center"
            android:textSize="20sp"
            android:visibility="invisible"
            />

        <Button
            android:id="@+id/jokebutton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="0.5"
            android:text="@string/get_new_joke_text" />

        <Button
            android:id="@+id/punchbutton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="0.5"
            android:text="@string/Punch_it_text" />

        <Button
            android:id="@+id/addbutton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/add_fav"
            app:backgroundTint="#FFC107" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


</layout>
